{
  "version": 4,
  "terraform_version": "1.9.4",
  "serial": 60,
  "lineage": "6c3251c4-e05b-62a9-564f-b8d192a050ed",
  "resources": [
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_default_network_acl",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:578272615191:network-acl/acl-0783d1ffb369d656c",
            "default_network_acl_id": "acl-0783d1ffb369d656c",
            "egress": [
              {
                "action": "allow",
                "cidr_block": "",
                "from_port": 0,
                "icmp_code": 0,
                "icmp_type": 0,
                "ipv6_cidr_block": "::/0",
                "protocol": "-1",
                "rule_no": 101,
                "to_port": 0
              },
              {
                "action": "allow",
                "cidr_block": "0.0.0.0/0",
                "from_port": 0,
                "icmp_code": 0,
                "icmp_type": 0,
                "ipv6_cidr_block": "",
                "protocol": "-1",
                "rule_no": 100,
                "to_port": 0
              }
            ],
            "id": "acl-0783d1ffb369d656c",
            "ingress": [
              {
                "action": "allow",
                "cidr_block": "",
                "from_port": 0,
                "icmp_code": 0,
                "icmp_type": 0,
                "ipv6_cidr_block": "::/0",
                "protocol": "-1",
                "rule_no": 101,
                "to_port": 0
              },
              {
                "action": "allow",
                "cidr_block": "0.0.0.0/0",
                "from_port": 0,
                "icmp_code": 0,
                "icmp_type": 0,
                "ipv6_cidr_block": "",
                "protocol": "-1",
                "rule_no": 100,
                "to_port": 0
              }
            ],
            "owner_id": "578272615191",
            "region": "us-east-1",
            "subnet_ids": [
              "subnet-014d7f828c993fe7d",
              "subnet-03a90accc89d20a8f",
              "subnet-049b2175dc9341c6c",
              "subnet-07897b9a75bfb3ed5",
              "subnet-07ceb0fc44188678a",
              "subnet-0866524f3ad0415a8"
            ],
            "tags": {
              "BU": "apps",
              "CreatedAt": "2026-02-10T07:48:51Z",
              "Environment": "dev",
              "Name": "vpc-dev-001-apps-default",
              "Terraform": "true"
            },
            "tags_all": {
              "BU": "apps",
              "CreatedAt": "2026-02-10T07:48:51Z",
              "Environment": "dev",
              "Name": "vpc-dev-001-apps-default",
              "Terraform": "true"
            },
            "vpc_id": "vpc-0b471fd504ce56640"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_default_route_table",
      "name": "default",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:578272615191:route-table/rtb-08e1ffe9c1968d2fc",
            "default_route_table_id": "rtb-08e1ffe9c1968d2fc",
            "id": "rtb-08e1ffe9c1968d2fc",
            "owner_id": "578272615191",
            "propagating_vgws": [],
            "region": "us-east-1",
            "route": [],
            "tags": {
              "BU": "apps",
              "CreatedAt": "2026-02-10T07:48:51Z",
              "Environment": "dev",
              "Name": "vpc-dev-001-apps-default",
              "Terraform": "true"
            },
            "tags_all": {
              "BU": "apps",
              "CreatedAt": "2026-02-10T07:48:51Z",
              "Environment": "dev",
              "Name": "vpc-dev-001-apps-default",
              "Terraform": "true"
            },
            "timeouts": {
              "create": "5m",
              "update": "5m"
            },
            "vpc_id": "vpc-0b471fd504ce56640"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_default_security_group",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:578272615191:security-group/sg-0b9067079a538586a",
            "description": "default VPC security group",
            "egress": [],
            "id": "sg-0b9067079a538586a",
            "ingress": [],
            "name": "default",
            "name_prefix": "",
            "owner_id": "578272615191",
            "region": "us-east-1",
            "revoke_rules_on_delete": false,
            "tags": {
              "BU": "apps",
              "CreatedAt": "2026-02-10T07:48:51Z",
              "Environment": "dev",
              "Name": "vpc-dev-001-apps-default",
              "Terraform": "true"
            },
            "tags_all": {
              "BU": "apps",
              "CreatedAt": "2026-02-10T07:48:51Z",
              "Environment": "dev",
              "Name": "vpc-dev-001-apps-default",
              "Terraform": "true"
            },
            "vpc_id": "vpc-0b471fd504ce56640"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:578272615191:internet-gateway/igw-0ece6d02032a38772",
            "id": "igw-0ece6d02032a38772",
            "owner_id": "578272615191",
            "region": "us-east-1",
            "tags": {
              "BU": "apps",
              "CreatedAt": "2026-02-10T07:48:51Z",
              "Environment": "dev",
              "Name": "vpc-dev-001-apps",
              "Terraform": "true"
            },
            "tags_all": {
              "BU": "apps",
              "CreatedAt": "2026-02-10T07:48:51Z",
              "Environment": "dev",
              "Name": "vpc-dev-001-apps",
              "Terraform": "true"
            },
            "vpc_id": "vpc-0b471fd504ce56640"
          },
          "dependencies": [
            "data.aws_availability_zones.available",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route",
      "name": "public_internet_gateway",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "core_network_arn": "",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "igw-0ece6d02032a38772",
            "id": "r-rtb-053aff69badb6162d1080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "region": "us-east-1",
            "route_table_id": "rtb-053aff69badb6162d",
            "state": "active",
            "timeouts": {
              "create": "5m",
              "delete": null,
              "update": null
            },
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "dependencies": [
            "data.aws_availability_zones.available",
            "module.vpc.aws_internet_gateway.this",
            "module.vpc.aws_route_table.public",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:578272615191:route-table/rtb-00900601d94945c8b",
            "id": "rtb-00900601d94945c8b",
            "owner_id": "578272615191",
            "propagating_vgws": [],
            "region": "us-east-1",
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "eigw-00345f214bd185499",
                "gateway_id": "",
                "ipv6_cidr_block": "::/0",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "BU": "apps",
              "CreatedAt": "2026-02-10T07:48:51Z",
              "Environment": "dev",
              "Name": "vpc-dev-001-apps-private-us-east-1a",
              "Terraform": "true"
            },
            "tags_all": {
              "BU": "apps",
              "CreatedAt": "2026-02-10T07:48:51Z",
              "Environment": "dev",
              "Name": "vpc-dev-001-apps-private-us-east-1a",
              "Terraform": "true"
            },
            "timeouts": null,
            "vpc_id": "vpc-0b471fd504ce56640"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "data.aws_availability_zones.available",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:578272615191:route-table/rtb-0aecdc356cc1cae4a",
            "id": "rtb-0aecdc356cc1cae4a",
            "owner_id": "578272615191",
            "propagating_vgws": [],
            "region": "us-east-1",
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "eigw-00345f214bd185499",
                "gateway_id": "",
                "ipv6_cidr_block": "::/0",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "BU": "apps",
              "CreatedAt": "2026-02-10T07:48:51Z",
              "Environment": "dev",
              "Name": "vpc-dev-001-apps-private-us-east-1b",
              "Terraform": "true"
            },
            "tags_all": {
              "BU": "apps",
              "CreatedAt": "2026-02-10T07:48:51Z",
              "Environment": "dev",
              "Name": "vpc-dev-001-apps-private-us-east-1b",
              "Terraform": "true"
            },
            "timeouts": null,
            "vpc_id": "vpc-0b471fd504ce56640"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "data.aws_availability_zones.available",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:578272615191:route-table/rtb-04b34c729d10eb060",
            "id": "rtb-04b34c729d10eb060",
            "owner_id": "578272615191",
            "propagating_vgws": [],
            "region": "us-east-1",
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "eigw-00345f214bd185499",
                "gateway_id": "",
                "ipv6_cidr_block": "::/0",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "BU": "apps",
              "CreatedAt": "2026-02-10T07:48:51Z",
              "Environment": "dev",
              "Name": "vpc-dev-001-apps-private-us-east-1c",
              "Terraform": "true"
            },
            "tags_all": {
              "BU": "apps",
              "CreatedAt": "2026-02-10T07:48:51Z",
              "Environment": "dev",
              "Name": "vpc-dev-001-apps-private-us-east-1c",
              "Terraform": "true"
            },
            "timeouts": null,
            "vpc_id": "vpc-0b471fd504ce56640"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "data.aws_availability_zones.available",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:578272615191:route-table/rtb-053aff69badb6162d",
            "id": "rtb-053aff69badb6162d",
            "owner_id": "578272615191",
            "propagating_vgws": [],
            "region": "us-east-1",
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-0ece6d02032a38772",
                "ipv6_cidr_block": "::/0",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              },
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-0ece6d02032a38772",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "BU": "apps",
              "CreatedAt": "2026-02-10T07:48:51Z",
              "Environment": "dev",
              "Name": "vpc-dev-001-apps-public",
              "Terraform": "true"
            },
            "tags_all": {
              "BU": "apps",
              "CreatedAt": "2026-02-10T07:48:51Z",
              "Environment": "dev",
              "Name": "vpc-dev-001-apps-public",
              "Terraform": "true"
            },
            "timeouts": null,
            "vpc_id": "vpc-0b471fd504ce56640"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "data.aws_availability_zones.available",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-05edd40ef578a685f",
            "region": "us-east-1",
            "route_table_id": "rtb-00900601d94945c8b",
            "subnet_id": "subnet-012294d58ff163611"
          },
          "dependencies": [
            "data.aws_availability_zones.available",
            "module.vpc.aws_route_table.private",
            "module.vpc.aws_subnet.private",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-03a50b655e1c0e8d6",
            "region": "us-east-1",
            "route_table_id": "rtb-0aecdc356cc1cae4a",
            "subnet_id": "subnet-03b1b1975a1eb4697"
          },
          "dependencies": [
            "data.aws_availability_zones.available",
            "module.vpc.aws_route_table.private",
            "module.vpc.aws_subnet.private",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0733d0ffb7b05a5bc",
            "region": "us-east-1",
            "route_table_id": "rtb-04b34c729d10eb060",
            "subnet_id": "subnet-017a93a65d9159975"
          },
          "dependencies": [
            "data.aws_availability_zones.available",
            "module.vpc.aws_route_table.private",
            "module.vpc.aws_subnet.private",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0f4642aa90b256266",
            "region": "us-east-1",
            "route_table_id": "rtb-053aff69badb6162d",
            "subnet_id": "subnet-0f367a42c5c8f3d03"
          },
          "dependencies": [
            "data.aws_availability_zones.available",
            "module.vpc.aws_route_table.public",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-01fc7180d1604815a",
            "region": "us-east-1",
            "route_table_id": "rtb-053aff69badb6162d",
            "subnet_id": "subnet-0c7b02b64dd51a00b"
          },
          "dependencies": [
            "data.aws_availability_zones.available",
            "module.vpc.aws_route_table.public",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-02edc18f59a9a4c79",
            "region": "us-east-1",
            "route_table_id": "rtb-053aff69badb6162d",
            "subnet_id": "subnet-08fa9384940edb09a"
          },
          "dependencies": [
            "data.aws_availability_zones.available",
            "module.vpc.aws_route_table.public",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:578272615191:subnet/subnet-012294d58ff163611",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az4",
            "cidr_block": "10.0.160.0/20",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-012294d58ff163611",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "578272615191",
            "private_dns_hostname_type_on_launch": "ip-name",
            "region": "us-east-1",
            "tags": {
              "BU": "apps",
              "CreatedAt": "2026-02-10T07:48:51Z",
              "Environment": "dev",
              "Name": "vpc-dev-001-apps-private-us-east-1a",
              "Terraform": "true"
            },
            "tags_all": {
              "BU": "apps",
              "CreatedAt": "2026-02-10T07:48:51Z",
              "Environment": "dev",
              "Name": "vpc-dev-001-apps-private-us-east-1a",
              "Terraform": "true"
            },
            "vpc_id": "vpc-0b471fd504ce56640"
          },
          "dependencies": [
            "data.aws_availability_zones.available",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:578272615191:subnet/subnet-03b1b1975a1eb4697",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az6",
            "cidr_block": "10.0.176.0/20",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-03b1b1975a1eb4697",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "578272615191",
            "private_dns_hostname_type_on_launch": "ip-name",
            "region": "us-east-1",
            "tags": {
              "BU": "apps",
              "CreatedAt": "2026-02-10T07:48:51Z",
              "Environment": "dev",
              "Name": "vpc-dev-001-apps-private-us-east-1b",
              "Terraform": "true"
            },
            "tags_all": {
              "BU": "apps",
              "CreatedAt": "2026-02-10T07:48:51Z",
              "Environment": "dev",
              "Name": "vpc-dev-001-apps-private-us-east-1b",
              "Terraform": "true"
            },
            "vpc_id": "vpc-0b471fd504ce56640"
          },
          "dependencies": [
            "data.aws_availability_zones.available",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:578272615191:subnet/subnet-017a93a65d9159975",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1c",
            "availability_zone_id": "use1-az1",
            "cidr_block": "10.0.192.0/20",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-017a93a65d9159975",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "578272615191",
            "private_dns_hostname_type_on_launch": "ip-name",
            "region": "us-east-1",
            "tags": {
              "BU": "apps",
              "CreatedAt": "2026-02-10T07:48:51Z",
              "Environment": "dev",
              "Name": "vpc-dev-001-apps-private-us-east-1c",
              "Terraform": "true"
            },
            "tags_all": {
              "BU": "apps",
              "CreatedAt": "2026-02-10T07:48:51Z",
              "Environment": "dev",
              "Name": "vpc-dev-001-apps-private-us-east-1c",
              "Terraform": "true"
            },
            "vpc_id": "vpc-0b471fd504ce56640"
          },
          "dependencies": [
            "data.aws_availability_zones.available",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:578272615191:subnet/subnet-0f367a42c5c8f3d03",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az4",
            "cidr_block": "10.0.0.0/20",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0f367a42c5c8f3d03",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "578272615191",
            "private_dns_hostname_type_on_launch": "ip-name",
            "region": "us-east-1",
            "tags": {
              "BU": "apps",
              "CreatedAt": "2026-02-10T07:48:51Z",
              "Environment": "dev",
              "Name": "vpc-dev-001-apps-public-us-east-1a",
              "Terraform": "true"
            },
            "tags_all": {
              "BU": "apps",
              "CreatedAt": "2026-02-10T07:48:51Z",
              "Environment": "dev",
              "Name": "vpc-dev-001-apps-public-us-east-1a",
              "Terraform": "true"
            },
            "vpc_id": "vpc-0b471fd504ce56640"
          },
          "dependencies": [
            "data.aws_availability_zones.available",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:578272615191:subnet/subnet-0c7b02b64dd51a00b",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az6",
            "cidr_block": "10.0.16.0/20",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0c7b02b64dd51a00b",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "578272615191",
            "private_dns_hostname_type_on_launch": "ip-name",
            "region": "us-east-1",
            "tags": {
              "BU": "apps",
              "CreatedAt": "2026-02-10T07:48:51Z",
              "Environment": "dev",
              "Name": "vpc-dev-001-apps-public-us-east-1b",
              "Terraform": "true"
            },
            "tags_all": {
              "BU": "apps",
              "CreatedAt": "2026-02-10T07:48:51Z",
              "Environment": "dev",
              "Name": "vpc-dev-001-apps-public-us-east-1b",
              "Terraform": "true"
            },
            "vpc_id": "vpc-0b471fd504ce56640"
          },
          "dependencies": [
            "data.aws_availability_zones.available",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:578272615191:subnet/subnet-08fa9384940edb09a",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1c",
            "availability_zone_id": "use1-az1",
            "cidr_block": "10.0.32.0/20",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-08fa9384940edb09a",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "578272615191",
            "private_dns_hostname_type_on_launch": "ip-name",
            "region": "us-east-1",
            "tags": {
              "BU": "apps",
              "CreatedAt": "2026-02-10T07:48:51Z",
              "Environment": "dev",
              "Name": "vpc-dev-001-apps-public-us-east-1c",
              "Terraform": "true"
            },
            "tags_all": {
              "BU": "apps",
              "CreatedAt": "2026-02-10T07:48:51Z",
              "Environment": "dev",
              "Name": "vpc-dev-001-apps-public-us-east-1c",
              "Terraform": "true"
            },
            "vpc_id": "vpc-0b471fd504ce56640"
          },
          "dependencies": [
            "data.aws_availability_zones.available",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_vpc",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:578272615191:vpc/vpc-0b471fd504ce56640",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-0783d1ffb369d656c",
            "default_route_table_id": "rtb-08e1ffe9c1968d2fc",
            "default_security_group_id": "sg-0b9067079a538586a",
            "dhcp_options_id": "dopt-0c3389c5d4a7b5991",
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-0b471fd504ce56640",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-08e1ffe9c1968d2fc",
            "owner_id": "578272615191",
            "region": "us-east-1",
            "tags": {
              "BU": "apps",
              "CreatedAt": "2026-02-10T07:48:51Z",
              "Environment": "dev",
              "Name": "vpc-dev-001-apps",
              "Terraform": "true"
            },
            "tags_all": {
              "BU": "apps",
              "CreatedAt": "2026-02-10T07:48:51Z",
              "Environment": "dev",
              "Name": "vpc-dev-001-apps",
              "Terraform": "true"
            }
          }
        }
      ]
    }
  ]
}